--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
     <div class="root">
         
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
